fixing the different tests i made to test stuff because i could figure out how to fix the old tests so i just wrote new tests for a different page that didnt use javafx because javafx was crashing the virtual machine running the tests because it couldnt handle it apparently